[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
thiserror = "2.0.10"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
