[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.39"
derive_more = { version = "1.0.0", features = ["full"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "2.0.10"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
derive_builder = "0.20.2"
serde_json = "1.0.115"
tokio = { version = "1.43.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
